fix : extra spacing b/wn components

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     min-width: 380px;
+    scroll-behavior: smooth;
 }
 
 nav {
